# vortx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
.run/: Check (runtime).run.xml  gemm_bench.run.xml
examples/: gemm_bench.rs
src/: lib.rs  shapes.rs
src/linalg/: activation.rs  contiguous.rs  mod.rs  op_assign.rs  optim.rs  reduce.rs  repeat.rs
src/tensor/: mod.rs  tensor_impl.rs  tensor_macro.rs  tensor_mut.rs  tensor_ref.rs
vortx-shaders/: Cargo.toml
vortx-shaders/src/: lib.rs
vortx-shaders/src/linalg/: activation.rs  contiguous.rs  inv.rs  mod.rs  op_assign.rs  optim.rs  reduce.rs  repeat.rs  shape.rs
vortx-shaders/src/utils/: iterators.rs  limits.rs  mat.rs  mod.rs  trig.rs
